<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_movies">Movies</string>
    <string name="tab_movies_fav">Movies Favorite</string>
    <string name="tab_tv_fav">TV Show Favorite</string>
    <string name="error_msg">There is an error</string>
    <string name="server_error">Unreachable Server</string>
    <string name="movie_fav_msg">Movie added to favorite</string>
    <string name="tv_fav_msg">TV Show added to favorite</string>
    <string name="remove_favorite">Removed from favorite</string>
    <string name="data_not_found">Data not found</string>
    <string name="movie_name">Dummy Movie</string>
    <string name="movie_photo">Movie Photo</string>
    <string name="movie_release_date">2019–12–18</string>
    <string name="back_text">Press again to exit</string>
    <string name="title">Title</string>
    <string name="dummy_movie_title">Dummy Movie</string>
    <string name="dummy_movie_description">Dummy Movie Description</string>
    <string name="release_date">Release Date</string>
    <string name="dummy_movie_release_date">Dummy Movie Release Date</string>
    <string name="tv_show_pupularity">467.558</string>
    <string name="tvshow_popularity">Popularity</string>
    <string name="dummy_tv_description">Dummy TV Description</string>
    <string name="title_language">Language</string>
    <string name="search">Search</string>
    <string name="search_hint">Search here</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">Movie Favorites</string>
    <string name="empty_text">NO DATA</string>
</resources>
